# distributed-computing

./: CMakeLists.txt
pa1/: ipc.c  logs.c  logs.h  main.c  pipes.c  pipes.h  proc_child.c  proc_child.h  proc_main.c  proc_main.h
pa2/: logs.c  logs.h  main.c  pa1.h  pa23.c  pipes.c  proc_child.c  proc_child.h  proc_main.c  proc_main.h
pa3/: ipc.c  pa23.c  pipes.c  proc_child.c  proc_main.c  proc_main.h
pa4/: ipc.c  lock.c  logs.h  main.c  proc_child.c  proc_child.h  proc_main.c  utils.c  utils.h
pa5/: ipc.c  lock.c  logs.c  main.c  print_history.c  proc_child.c  proc_main.c  proc_main.h  utils.c  utils.h
